force-app/main/default/objects/Bank_Account__c/fields/Bank_Description__c.field-meta.xml
<CustomField>
    <fullName>Bank_Description__c</fullName>
    <label>Bank Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>