force-app/main/default/objects/Bank_Account__c/fields/Bank_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Institution_Name__c</fullName>
    <label>Bank Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>