force-app/main/default/objects/Bank_Account__c/fields/Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>Entity_Address__c</fullName>
    <label>Entity Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>